[package]
name = "api-view-art"
version = "0.1.0"
edition = "2021"

[dependencies]
# runtime, async, networking
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"

# db
redis = { version = "0.25.3", features = ["tokio-comp"] }

# errors, logging, tracing
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# configuration, env, secrets
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# utils
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.5"
